# ddns

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  INSTALL.md  README.md  docker-compose.yml  install.sh
.ai/: AI_CONTRACT.md  QUICK_START.md
.github/workflows/: ci.yml  coverage.yml  dependencies.yml  release.yml
crates/ddns-core/: Cargo.toml
crates/ddns-core/src/: config.rs  error.rs  lib.rs
crates/ddns-core/src/engine/: mod.rs
crates/ddns-core/src/registry/: mod.rs
crates/ddns-core/src/state/: file.rs  memory.rs  mod.rs
crates/ddns-core/src/traits/: dns_provider.rs  ip_source.rs  mod.rs  state_store.rs
crates/ddns-core/tests/: event_driven_update_contract.rs  idempotency_contract.rs  idle_behavior_contract.rs  retry_architecture_contract.rs  shutdown_determinism_contract.rs
crates/ddns-core/tests/common/: mod.rs
crates/ddns-ip-http/: Cargo.toml
crates/ddns-ip-http/src/: lib.rs
crates/ddns-ip-netlink/: Cargo.toml
crates/ddns-ip-netlink/src/: lib.rs
crates/ddns-provider-cloudflare/: Cargo.toml
crates/ddns-provider-cloudflare/src/: lib.rs
crates/ddnsd/: Cargo.toml
crates/ddnsd/src/: main.rs
deploy/: README.md  ddnsd.default  ddnsd.service  docker-run.sh  install-systemd.sh  k8s-deploy.sh
deploy/k8s/: README.md  configmap.yaml  deployment.yaml  namespace.yaml  secret.yaml  serviceaccount.yaml
docs/: ARCHITECTURAL_PROGRAM_SUMMARY.md  CRASH_RECOVERY.md  DEPLOYMENT.md  OBSERVABILITY.md  OPS.md  PHASE_22_VALIDATION.md  SECRET_ROTATION.md  SECURITY.md  VERSIONING.md
docs/architecture/: ARCHITECTURE.md  CONFIGURATION.md  FAILURE_MODEL.md  LIFECYCLE.md  OBSERVABILITY.md  PERFORMANCE.md  TRAIT_BOUNDARIES.md  TRUST_LEVELS.md
examples/: Cargo.toml  cloudflare-validation.rs  ddnsd.env.example  embedded_usage.rs
scripts/: build-release.sh
