[workspace]
resolver = "2"
members = [
    "crates/ddns-core",
    "crates/ddnsd",
    "crates/ddns-provider-cloudflare",
    "crates/ddns-ip-netlink",
    "examples",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["DDNS Lab"]
repository = "https://github.com/ddns-lab/ddns"

[workspace.dependencies]
tokio = { version = "1.42", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0"
 anyhow = "1.0"
