[package]
name = "ddns-ip-http"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "HTTP-based IP source for the DDNS system (fallback/CI)"

[dependencies]
ddns-core = { path = "../ddns-core", version = "0.1" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
