[package]
name = "ddns-ip-netlink"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Netlink-based IP source for the DDNS system (Linux)"

[dependencies]
ddns-core = { path = "../ddns-core", version = "0.1" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Netlink library (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
netlink-sys = { version = "0.8", features = ["tokio"] }
netlink-packet-core = "0.7"
netlink-packet-route = "0.17"
libc = "0.2"
