[package]
name = "ddns-provider-cloudflare"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Cloudflare DNS provider for the DDNS system"

[dependencies]
ddns-core = { path = "../ddns-core", version = "0.1" }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# HTTP client for Cloudflare API v4
reqwest = { version = "0.12", features = ["json"] }
